Bug 426661 - "System Activity" window has incorrect padding
Summary: "System Activity" window has incorrect padding
Status: RESOLVED FIXED
Alias: None
Product: ksysguard
Classification: Unmaintained
Component: Process Controller - krunner part (other bugs)
Version First Reported In: 5.19.5
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-18 00:59 UTC by Adam Fontenot
Modified: 2020-09-19 22:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments
screenshot of problem (79.38 KB, image/png)
2020-09-18 00:59 UTC, Adam Fontenot
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Fontenot 2020-09-18 00:59:10 UTC
Created attachment 131736 [details]
screenshot of problem

Two related (but not identical) bugs: https://bugs.kde.org/show_bug.cgi?id=173668
https://bugs.kde.org/show_bug.cgi?id=400298

I chose the product / component based on the latter, which seemed reasonable. 

When you open the "System Activity" window (usually the Ctrl-ESC shortcut), with Breeze, you should immediately see that the sides of the widget lack padding and the result is quite ugly. 

Screenshot attached.

This appears to be because the window uses the same widget as Ksysguard's "Process Table" tab, but doesn't provide any padding to that widget.

SOFTWARE/OS VERSIONS
Linux: 5.8.5-arch1-1 (x86_64)
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.1
Comment 1 Nate Graham 2020-09-18 21:19:20 UTC
lol such an easy fix. Will fix momentarily
Comment 2 Bug Janitor Service 2020-09-18 21:23:02 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/273
Comment 3 Nate Graham 2020-09-19 22:07:03 UTC
Git commit 42e2078cfd41396ceb6d78746f2ebbdd53b11ee8 by Nate Graham.
Committed on 19/09/2020 at 22:06.
Pushed by ngraham into branch 'master'.

Add margins to System Activity window

Right now it is deliberately setting the margins to zero, which causes
all of its UI controls and framed areas to touch the window border,
which looks bad and is just an incorrect thing to do in general for a
thing that does not deliberately provide its own margins for content.

Let's not do that anymore, so the window looks better.
FIXED-IN: 5.20

M  +0    -2    systemmonitor/ksystemactivitydialog.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/42e2078cfd41396ceb6d78746f2ebbdd53b11ee8
Comment 4 Nate Graham 2020-09-19 22:08:31 UTC
Git commit a1bf7ba2d778c63bf00abd2c90c16f1b2657f053 by Nate Graham.
Committed on 19/09/2020 at 22:08.
Pushed by ngraham into branch 'Plasma/5.20'.

Add margins to System Activity window

Right now it is deliberately setting the margins to zero, which causes
all of its UI controls and framed areas to touch the window border,
which looks bad and is just an incorrect thing to do in general for a
thing that does not deliberately provide its own margins for content.

Let's not do that anymore, so the window looks better.
FIXED-IN: 5.20


(cherry picked from commit 42e2078cfd41396ceb6d78746f2ebbdd53b11ee8)

M  +0    -2    systemmonitor/ksystemactivitydialog.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/a1bf7ba2d778c63bf00abd2c90c16f1b2657f053